# zipchord

./: .gitignore  Cargo.toml  PKGBUILD  README.md  perf.data  perf.data.old
dictionaries/: english.zc
src/: PKGBUILD  chordstream.rs  config.rs  lib.rs  main.rs  text_injector.rs
src/stream/: detect.rs  listener.rs  mod.rs  timing.rs
