[package]
name = "zipchord"
version = "0.1.0"
edition = "2021"

[dependencies]
evdev = "0.13"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
anyhow = "1.0"
libc = "0.2"
simple_logger = "5.0.0"
dirs = "6.0"
thiserror = "2.0.11"
users = "0.11"
nix ="0.29"

[profile.release]
debug = false